# data-engineering-pipeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  router.py  service.py
config/: __init__.py  airflow_options.py  database_options.py  minio_options.py
healthchecks/: __init__.py  airflow.py  minio.py  postgres.py
